@startuml

package Fuente_Proxy {

class HechoDTO {
  - id : Long
  - titulo : String
  - descripcion : String
  - categoria : String
  - latitud : Double
  - longitud : Double
  - fecha_hecho : LocalDateTime
  - created_at : LocalDateTime
  - updated_at : LocalDateTime
}

class HechosResponseDTO {
  - current_page : int
  - data : List<HechoDTO>
  + getHechos() : List<HechoDTO>
}

class HechosRepository {
  - hechos : List<HechoDTO>
  + findByTitulo(titulo : String) : Optional<HechoDTO>
  + save(hecho : HechoDTO) : void
  + findAll() : List<HechoDTO>
}

interface IHechoRepository {
  + findByTitulo(titulo : String) : Optional<HechoDTO>
  + save(hecho : HechoDTO) : void
  + findAll() : List<HechoDTO>
}

class DDSService {
  - webClient : WebClient
  - hechosRepository : IHechoRepository
  + getHechos() : Mono<List<HechoDTO>>
  + guardarHechosEnRepositorio(hechos : List<HechoDTO>) : void
}

class MetaMapaService {
  - webClient : WebClient
  - hechosRepository : IHechoRepository
  + getHechos() : Mono<List<HechoDTO>>
  + guardarHechosEnRepositorio(hechos : List<HechoDTO>) : void
}

class ProxyService {
  - ddsService : DDSService
  - metaMapaService : MetaMapaService
  - hechosRepository : IHechoRepository
  + cargarYObtenerHechos() : Mono<List<HechoDTO>>
}

DDSService ..|> IFuenteService
MetaMapaService ..|> IFuenteService
HechosRepository ..|> IHechoRepository
ProxyService --> DDSService
ProxyService --> MetaMapaService
ProxyService --> IHechoRepository
DDSService --> IHechoRepository
MetaMapaService --> IHechoRepository
IFuenteService ..> HechosResponseDTO
HechosResponseDTO  --> "*" HechoDTO

interface IFuenteService {
  + getHechos() : Mono<List<HechoDTO>>
  + guardarHechosEnRepositorio(hechos : List<HechoDTO>) : void
}

}
@enduml